--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ version "2.0-SNAPSHOT"
 ext {
 	learnVersion = "9.1.201404.160205"
 	springVersion = "4.2.1.RELEASE"
-	deployServer = "192.168.0.101:9876"
+	deployServer = "localhost:9876"
 	deployInstance = "BBLEARN"
 }
 
